--- a/index.html
+++ b/index.html
@@ -1,36 +1,66 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>My test page</title>
-    <link href="styles/style.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PayolaPal - LoL Boosting Services</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body>
-    <h1>ZUZU</h1>
-
-    <img src="images/zuzu.jpeg" alt="ZUZU" />
-    <p id="sugar-count" style="display: none">Sugar Count: 0 grams</p>
-    <p>ZUZU is</p>
-
-    <ul>
-      <li>attractive</li>
-      <li>beautiful</li>
-      <li>gorgeous</li>
-    </ul>
-    <p>Click on zuzu to play with him!</p>
-    <p>
-      <a
-        href="https://www.linkedin.com/in/joseph-bechara-abb7b71b1/?originalSubdomain=au"
-      >
-        LinkedIn
+  <body class="fade-in homepage">
+    <header>
+      <a href="index.html" class="logo">
+        <img src="images/logo.png" alt="PayolaPal Logo" class="logo-img" />
+        PayolaPal
       </a>
-    </p>
-    <button>Change user</button>
-    <script src="scripts/main.js"></script>
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="order.html">Order</a>
+        <a href="faq.html">FAQ</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
+
+    <main class="hero">
+      <h1 class="hero-title">Reach Your Dream Rank</h1>
+      <p class="hero-subtitle">
+        Professional League of Legends Boosting — Fast, Safe, Anonymous
+      </p>
+      <a
+        href="order.html"
+        class="submitButton"
+        style="padding: 12px 24px; font-size: 1.1em"
+        >Start Now</a
+      >
+    </main>
+
+    <section
+      style="
+        margin-top: 40px;
+        background: rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
+        padding: 20px;
+      "
+    >
+      <h2 style="text-align: center; margin-bottom: 20px">
+        Why Choose PayolaPal?
+      </h2>
+      <ul style="list-style: none; padding-left: 0">
+        <li>✅ Grandmaster+ boosters only</li>
+        <li>✅ Secure and private service</li>
+        <li>✅ 24/7 Discord support</li>
+        <li>✅ Custom requests & duo queue options</li>
+      </ul>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 PayolaPal</p>
+    </footer>
+
+    <script src="scripts/transition.js"></script>
   </body>
 </html>
