--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
       <section class="contact-info">
         <h3>Get in Touch</h3>
         <p>
-          We’re here to help! If you have any questions or need support, please
-          don’t hesitate to reach out.
+          We're here to help! If you have any questions or need support, please
+          don't hesitate to reach out.
         </p>
         <p><strong>Email:</strong> support@payolapal.com</p>
         <p>
