--- a/faq.html
+++ b/faq.html
@@ -17,10 +17,10 @@
         PayolaPal
       </a>
       <nav>
-        <a href="services.html">Services</a>
         <a href="order.html">Order</a>
         <a href="faq.html">FAQ</a>
         <a href="about.html">About</a>
+        <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </nav>
     </header>
