--- a/reviews.html
+++ b/reviews.html
@@ -17,8 +17,9 @@
         PayolaPal
       </a>
       <nav>
+        <a href="order.html">Order</a>
+        <a href="faq.html">FAQ</a>
         <a href="about.html">About</a>
-        <a href="services.html">Services</a>
         <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </nav>
