--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         PayolaPal
       </a>
       <nav>
-        <a href="order.html">Order</a>
+        <a href="rankboost.html">Order</a>
         <a href="faq.html">FAQ</a>
         <a href="about.html">About</a>
         <a href="reviews.html">Reviews</a>
@@ -31,7 +31,7 @@
         Professional League of Legends Boosting — Fast, Safe, Anonymous
       </p>
       <a
-        href="order.html"
+        href="rankboost.html"
         class="submitButton"
         style="padding: 12px 24px; font-size: 1.1em"
         >Start Now</a
