--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
         PayolaPal
       </a>
       <nav>
-        <a href="order.html">Order</a>
+        <a href="rankboost.html">Order</a>
         <a href="faq.html">FAQ</a>
         <a href="about.html">About</a>
         <a href="reviews.html">Reviews</a>
