--- a/placement.html
+++ b/placement.html
@@ -101,6 +101,7 @@
               </div>
             </div>
 
+            <!-- Current Division -->
             <label id="current-division-label">Current Division:</label>
             <div class="division-selection" id="current-division-selection">
               <div class="division-box" data-division="I">I</div>
@@ -109,7 +110,7 @@
               <div class="division-box" data-division="IV">IV</div>
             </div>
 
-            <!-- Current LP Input (Hidden unless Master) -->
+            <!-- Current LP Input (Hidden unless Master+) -->
             <div
               class="lp-container"
               id="current-lp-container"
