--- a/wins.html
+++ b/wins.html
@@ -101,7 +101,7 @@
               </div>
             </div>
 
-            <label>Current Division:</label>
+            <label>Current Divisions:</label>
             <div class="division-selection" id="current-division-selection">
               <div class="division-box" data-division="I">I</div>
               <div class="division-box" data-division="II">II</div>
