--- a/rankboost.html
+++ b/rankboost.html
@@ -64,7 +64,6 @@
           <h2>Current Rank</h2>
           <form id="current-rank-form">
             <div class="tier-icons" id="current-tier-icons">
-              <label>Current Tier:</label>
               <div class="tier-selection" data-type="current">
                 <img src="images/icons/iron.png" alt="Iron" data-tier="iron" />
                 <img
@@ -101,21 +100,21 @@
               </div>
             </div>
 
-            <label>Current Division:</label>
-            <div class="division-selection" id="current-division-selection">
-              <div class="division-box" data-division="I">I</div>
-              <div class="division-box" data-division="II">II</div>
-              <div class="division-box" data-division="III">III</div>
-              <div class="division-box" data-division="IV">IV</div>
+            <!-- Current Division Input (Shown for ranks below Master) -->
+            <div id="current-division-container">
+              <div
+                class="lp-input-group division-selection"
+                id="current-division-selection"
+              >
+                <div class="division-box" data-division="I">I</div>
+                <div class="division-box" data-division="II">II</div>
+                <div class="division-box" data-division="III">III</div>
+                <div class="division-box" data-division="IV">IV</div>
+              </div>
             </div>
 
-            <!-- Current LP Input (Hidden unless Master) -->
-            <div
-              class="lp-container"
-              id="current-lp-container"
-              style="display: none"
-            >
-              <label>Current LP:</label>
+            <!-- Current LP Input (Shown for Master+) -->
+            <div id="current-lp-container" style="display: none">
               <div class="lp-input-group">
                 <input
                   type="range"
@@ -133,6 +132,27 @@
                 />
               </div>
             </div>
+
+            <div class="dropdown-group" id="current-lp-dropdown-container">
+              <label for="current-lp">Current LP:</label>
+              <select id="current-lp">
+                <option value="0">0-20</option>
+                <option value="1">21-40</option>
+                <option value="2">41-60</option>
+                <option value="3">61-80</option>
+                <option value="4">81-100</option>
+              </select>
+            </div>
+
+            <div class="dropdown-group" id="current-lp-gain-container">
+              <label for="current-lp-gain">LP Gain:</label>
+              <select id="current-lp-gain">
+                <option value="0-14">0-14</option>
+                <option value="15-20">15-20</option>
+                <option value="21-25">21-25</option>
+                <option value="26+">26+</option>
+              </select>
+            </div>
           </form>
         </div>
 
@@ -141,7 +161,6 @@
           <h2>Desired Rank</h2>
           <form id="desired-rank-form">
             <div class="tier-icons" id="desired-tier-icons">
-              <label>Desired Tier:</label>
               <div class="tier-selection" data-type="desired">
                 <img src="images/icons/iron.png" alt="Iron" data-tier="iron" />
                 <img
@@ -178,7 +197,6 @@
               </div>
             </div>
 
-            <label>Desired Division:</label>
             <div class="division-selection" id="desired-division-selection">
               <div class="division-box" data-division="I">I</div>
               <div class="division-box" data-division="II">II</div>
@@ -187,12 +205,7 @@
             </div>
 
             <!-- Desired LP Input (Hidden unless Master) -->
-            <div
-              class="lp-container"
-              id="desired-lp-container"
-              style="display: none"
-            >
-              <label>Desired LP:</label>
+            <div id="desired-lp-container" style="display: none">
               <div class="lp-input-group">
                 <input
                   type="range"
@@ -306,7 +319,7 @@
             </div>
 
             <div class="pricing-card">
-              <p id="final-price">$150 - $300</p>
+              <p id="final-price">$10</p>
               <p>Price based on your selections</p>
             </div>
 
