--- a/index.html
+++ b/index.html
@@ -50,46 +50,39 @@
         Our Boosting Services
       </h2>
       <div class="service-grid">
-        <a href="order.html?service=rankBoost" class="service-card">
-          <h3>Rank Boost</h3>
+        <a href="rankboost.html" class="service-card">
+          <h3>Division Boost</h3>
           <p>
             Get your account boosted from your current division to your desired
             rank. Safe and fast, handled by high-ELO pros.
           </p>
         </a>
-        <a href="order.html?service=winBoost" class="service-card">
-          <h3>Win Boosting</h3>
+        <a href="wins.html" class="service-card">
+          <h3>Net Wins</h3>
           <p>
             Order a set number of wins — ideal if you just need a quick push
             without full division boosts.
           </p>
         </a>
-        <a href="order.html?service=duoQueue" class="service-card">
-          <h3>Duo Queue Boost</h3>
-          <p>
-            Play alongside one of our boosters and win together. No account
-            sharing required.
-          </p>
-        </a>
-        <a href="order.html?service=placement" class="service-card">
+        <a href="placement.html" class="service-card">
           <h3>Placement Matches</h3>
           <p>
             Let our experts handle your ranked placements to start the season
             strong.
           </p>
         </a>
-        <a href="order.html?service=coaching" class="service-card">
-          <h3>Coaching Sessions</h3>
-          <p>
-            Learn from top-tier players in structured 1-on-1 sessions. Improve
-            your own skills dramatically.
-          </p>
-        </a>
-        <a href="order.html?service=custom" class="service-card">
+        <a href="wtcustom.html" class="service-card">
           <h3>Wintrading / Custom</h3>
           <p>
             Special request services such as wintrading or flex queue
             manipulation — available upon discussion.
+          </p>
+        </a>
+        <a href="ourboosters.html" class="service-card">
+          <h3>Coaching Sessions</h3>
+          <p>
+            Learn from top-tier players in structured 1-on-1 sessions. Improve
+            your own skills dramatically.
           </p>
         </a>
       </div>
