--- a/wtcustom.html
+++ b/wtcustom.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rank Boost - PayolaPal</title>
+    <title>Order - PayolaPal</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/rankboost.css" />
+    <link rel="stylesheet" href="styles/wtcustom.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body class="fade-in">
-    <!-- Header Section -->
     <header>
       <a href="index.html" class="logo">
         <img src="images/logo.png" alt="PayolaPal Logo" class="logo-img" />
@@ -22,7 +22,6 @@
         <a href="rankboost.html">Order</a>
         <a href="faq.html">FAQ</a>
         <a href="about.html">About</a>
-        <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </nav>
     </header>
@@ -44,283 +43,215 @@
           >
         </li>
         <li>
-          <a href="wtcustom.html" class="subnav-link" id="wtcustom"
+          <a href="wtcustom.html" class="subnav-link active" id="wtcustom"
             >WinTrade/Custom</a
           >
         </li>
       </ul>
     </nav>
 
-    <!-- Main Content Box -->
     <main id="main-content">
-      <h1>Rank Boost</h1>
+      <h1>Wintrading/Custom</h1>
       <p>
-        Choose your current rank, desired rank, and select additional options.
-        The final price will be calculated based on your selections.
+        Special request services such as wintrading or flex queue manipulation —
+        available upon discussion.
       </p>
 
-      <div class="boost-boxes">
-        <div class="boost-box">
-          <h2>Current Rank</h2>
-          <form id="current-rank-form">
-            <div class="tier-icons" id="current-tier-icons">
-              <label>Current Tier:</label>
-              <div class="tier-selection" data-type="current">
-                <img src="images/icons/iron.png" alt="Iron" data-tier="iron" />
-                <img
-                  src="images/icons/bronze.png"
-                  alt="Bronze"
-                  data-tier="bronze"
-                />
-                <img
-                  src="images/icons/silver.png"
-                  alt="Silver"
-                  data-tier="silver"
-                />
-                <img src="images/icons/gold.png" alt="Gold" data-tier="gold" />
-                <img
-                  src="images/icons/platinum.png"
-                  alt="Platinum"
-                  data-tier="platinum"
-                />
-                <img
-                  src="images/icons/emerald.png"
-                  alt="Emerald"
-                  data-tier="emerald"
-                />
-                <img
-                  src="images/icons/diamond.png"
-                  alt="Diamond"
-                  data-tier="diamond"
-                />
-                <img
-                  src="images/icons/master.png"
-                  alt="Master"
-                  data-tier="master"
-                />
+      <div class="form-container">
+        <form id="orderForm">
+          <label for="summonerName">What is your Summoner Name?</label>
+          <input
+            type="text"
+            id="summonerName"
+            name="summonerName"
+            placeholder="Summoner123"
+            required
+          />
+
+          <label for="server">What server are you on?</label>
+          <input
+            type="text"
+            id="server"
+            name="server"
+            placeholder="NA / EUW / EUNE / etc."
+            required
+          />
+
+          <div class="boost-box">
+            <h2>Current Rank</h2>
+            <form id="current-rank-form">
+              <div class="tier-icons" id="current-tier-icons">
+                <div class="tier-selection" data-type="current">
+                  <img
+                    src="images/icons/unranked.png"
+                    alt="Iron"
+                    data-tier="iron"
+                  />
+                  <img
+                    src="images/icons/iron.png"
+                    alt="Iron"
+                    data-tier="iron"
+                  />
+                  <img
+                    src="images/icons/bronze.png"
+                    alt="Bronze"
+                    data-tier="bronze"
+                  />
+                  <img
+                    src="images/icons/silver.png"
+                    alt="Silver"
+                    data-tier="silver"
+                  />
+                  <img
+                    src="images/icons/gold.png"
+                    alt="Gold"
+                    data-tier="gold"
+                  />
+                  <img
+                    src="images/icons/platinum.png"
+                    alt="Platinum"
+                    data-tier="platinum"
+                  />
+                  <img
+                    src="images/icons/emerald.png"
+                    alt="Emerald"
+                    data-tier="emerald"
+                  />
+                  <img
+                    src="images/icons/diamond.png"
+                    alt="Diamond"
+                    data-tier="diamond"
+                  />
+                  <img
+                    src="images/icons/master.png"
+                    alt="Master"
+                    data-tier="master"
+                  />
+                </div>
               </div>
-            </div>
 
-            <label>Current Division:</label>
-            <div class="division-selection" id="current-division-selection">
-              <div class="division-box" data-division="I">I</div>
-              <div class="division-box" data-division="II">II</div>
-              <div class="division-box" data-division="III">III</div>
-              <div class="division-box" data-division="IV">IV</div>
-            </div>
-
-            <!-- Current LP Input (Hidden unless Master) -->
-            <div
-              class="lp-container"
-              id="current-lp-container"
-              style="display: none"
-            >
-              <label>Current LP:</label>
-              <div class="lp-input-group">
-                <input
-                  type="range"
-                  id="current-lp-range"
-                  min="0"
-                  max="1000"
-                  value="0"
-                />
-                <input
-                  type="number"
-                  id="current-lp-number"
-                  min="0"
-                  max="1000"
-                  value="0"
-                />
+              <div id="current-division-container">
+                <div
+                  class="lp-input-group division-selection"
+                  id="current-division-selection"
+                >
+                  <div class="division-box" data-division="I">I</div>
+                  <div class="division-box" data-division="II">II</div>
+                  <div class="division-box" data-division="III">III</div>
+                  <div class="division-box" data-division="IV">IV</div>
+                </div>
               </div>
-            </div>
-          </form>
-        </div>
 
-        <!-- Desired Rank Box -->
-        <div class="boost-box">
-          <h2>Desired Rank</h2>
-          <form id="desired-rank-form">
-            <div class="tier-icons" id="desired-tier-icons">
-              <label>Desired Tier:</label>
-              <div class="tier-selection" data-type="desired">
-                <img src="images/icons/iron.png" alt="Iron" data-tier="iron" />
-                <img
-                  src="images/icons/bronze.png"
-                  alt="Bronze"
-                  data-tier="bronze"
-                />
-                <img
-                  src="images/icons/silver.png"
-                  alt="Silver"
-                  data-tier="silver"
-                />
-                <img src="images/icons/gold.png" alt="Gold" data-tier="gold" />
-                <img
-                  src="images/icons/platinum.png"
-                  alt="Platinum"
-                  data-tier="platinum"
-                />
-                <img
-                  src="images/icons/emerald.png"
-                  alt="Emerald"
-                  data-tier="emerald"
-                />
-                <img
-                  src="images/icons/diamond.png"
-                  alt="Diamond"
-                  data-tier="diamond"
-                />
-                <img
-                  src="images/icons/master.png"
-                  alt="Master"
-                  data-tier="master"
-                />
+              <div id="current-lp-container" style="display: none">
+                <div class="lp-input-group">
+                  <input
+                    type="range"
+                    id="current-lp-range"
+                    min="0"
+                    max="1000"
+                    value="0"
+                  />
+                  <input
+                    type="number"
+                    id="current-lp-number"
+                    min="0"
+                    max="1000"
+                    value="0"
+                  />
+                </div>
               </div>
-            </div>
 
-            <label>Desired Division:</label>
-            <div class="division-selection" id="desired-division-selection">
-              <div class="division-box" data-division="I">I</div>
-              <div class="division-box" data-division="II">II</div>
-              <div class="division-box" data-division="III">III</div>
-              <div class="division-box" data-division="IV">IV</div>
-            </div>
-
-            <!-- Desired LP Input (Hidden unless Master) -->
-            <div
-              class="lp-container"
-              id="desired-lp-container"
-              style="display: none"
-            >
-              <label>Desired LP:</label>
-              <div class="lp-input-group">
-                <input
-                  type="range"
-                  id="desired-lp-range"
-                  min="0"
-                  max="1000"
-                  value="0"
-                />
-                <input
-                  type="number"
-                  id="desired-lp-number"
-                  min="0"
-                  max="1000"
-                  value="0"
-                />
+              <div class="dropdown-group" id="current-lp-dropdown-container">
+                <label for="current-lp">Current LP:</label>
+                <select id="current-lp">
+                  <option value="0">0-20</option>
+                  <option value="1">21-40</option>
+                  <option value="2">41-60</option>
+                  <option value="3">61-80</option>
+                  <option value="4">81-100</option>
+                </select>
               </div>
-            </div>
-          </form>
-        </div>
 
-        <!-- Checkout Box -->
-        <div class="boost-box checkout">
-          <h2>Checkout</h2>
-
-          <!-- Rank Summary -->
-          <div id="summary">
-            <div class="selected-rank">
-              <img
-                id="current-rank-icon"
-                src="images/icons/bronze.png"
-                alt="Current Rank Icon"
-              />
-              <span id="current-rank-name">Bronze</span>
-              <span id="current-division">II</span>
-            </div>
-            <span class="arrow">→</span>
-            <div class="selected-rank">
-              <img
-                id="desired-rank-icon"
-                src="images/icons/silver.png"
-                alt="Desired Rank Icon"
-              />
-              <span id="desired-rank-name">Silver</span>
-              <span id="desired-division">II</span>
-            </div>
+              <div class="dropdown-group" id="current-lp-gain-container">
+                <label for="current-lp-gain">LP Gain:</label>
+                <select id="current-lp-gain">
+                  <option value="0-14">0-14</option>
+                  <option value="15-20">15-20</option>
+                  <option value="21-25">21-25</option>
+                  <option value="26+">26+</option>
+                </select>
+              </div>
+            </form>
           </div>
 
-          <!-- Checkout Form -->
-          <form id="checkout-form">
-            <label for="extra-options">Additional Options:</label>
-            <div class="extra-options">
-              <div class="option">
-                <input
-                  type="checkbox"
-                  id="duo-boosting"
-                  name="extra-options"
-                  value="duo-boosting"
-                />
-                <label for="duo-boosting" class="option-label"
-                  >Duo Boosting (+50%)</label
-                >
-              </div>
+          <label
+            for="discord"
+            style="
+              display: block;
+              margin-top: 15px;
+              font-family: 'Poppins', sans-serif;
+              font-size: 1rem;
+              color: #fff;
+            "
+            >What is your Discord username?</label
+          >
+          <input
+            type="text"
+            id="discord"
+            name="discord"
+            placeholder="user#1234"
+            required
+            style="
+              display: block;
+              width: 100%;
+              padding: 10px;
+              margin-top: 6px;
+              background-color: #1c1c1c;
+              color: #fff;
+              border: 1px solid #555;
+              border-radius: 6px;
+            "
+          />
 
-              <div class="option">
-                <input
-                  type="checkbox"
-                  id="livestream"
-                  name="extra-options"
-                  value="livestream"
-                />
-                <label for="livestream" class="option-label"
-                  >Livestream (+25%)</label
-                >
-              </div>
+          <label
+            for="notes"
+            style="
+              display: block;
+              margin-top: 15px;
+              font-family: 'Poppins', sans-serif;
+              font-size: 1rem;
+              color: #fff;
+            "
+            >Additional Notes:</label
+          >
+          <textarea
+            id="notes"
+            name="notes"
+            placeholder="Any specific requests?"
+            style="
+              display: block;
+              width: 100%;
+              padding: 10px;
+              margin-top: 6px;
+              background-color: #1c1c1c;
+              color: #fff;
+              border: 1px solid #555;
+              border-radius: 6px;
+              min-height: 100px;
+              resize: vertical;
+            "
+          ></textarea>
 
-              <div class="option">
-                <input
-                  type="checkbox"
-                  id="solo-only"
-                  name="extra-options"
-                  value="solo-only"
-                />
-                <label for="solo-only" class="option-label"
-                  >Solo Only (+25%)</label
-                >
-              </div>
-
-              <div class="option">
-                <input
-                  type="checkbox"
-                  id="priority-order"
-                  name="extra-options"
-                  value="priority-order"
-                />
-                <label for="priority-order" class="option-label"
-                  >Priority Order (+20%)</label
-                >
-              </div>
-
-              <div class="option">
-                <input
-                  type="checkbox"
-                  id="appear-offline"
-                  name="extra-options"
-                  value="appear-offline"
-                />
-                <label for="appear-offline" class="option-label"
-                  >Appear Offline (FREE)</label
-                >
-              </div>
-            </div>
-
-            <div class="pricing-card">
-              <p id="final-price">$150 - $300</p>
-              <p>Price based on your selections</p>
-            </div>
-
-            <button type="submit">Proceed to Checkout</button>
-          </form>
-        </div>
+          <input class="submitButton" type="submit" value="Submit Order" />
+        </form>
       </div>
     </main>
 
-    <!-- Footer -->
     <footer>
       <p>&copy; 2025 PayolaPal</p>
     </footer>
 
-    <script src="scripts/rankboost.js"></script>
+    <script src="scripts/transition.js"></script>
+    <script src="scripts/wtcustom.js"></script>
   </body>
 </html>
