--- a/wtcustom.html
+++ b/wtcustom.html
@@ -88,39 +88,39 @@
                 <img
                   src="images/icons/unranked.png"
                   alt="Iron"
-                  data-tier="iron"
+                  data-tier="Iron"
                 />
                 <img src="images/icons/iron.png" alt="Iron" data-tier="iron" />
                 <img
                   src="images/icons/bronze.png"
                   alt="Bronze"
-                  data-tier="bronze"
+                  data-tier="Bronze"
                 />
                 <img
                   src="images/icons/silver.png"
                   alt="Silver"
-                  data-tier="silver"
+                  data-tier="Silver"
                 />
                 <img src="images/icons/gold.png" alt="Gold" data-tier="gold" />
                 <img
                   src="images/icons/platinum.png"
                   alt="Platinum"
-                  data-tier="platinum"
+                  data-tier="Platinum"
                 />
                 <img
                   src="images/icons/emerald.png"
                   alt="Emerald"
-                  data-tier="emerald"
+                  data-tier="Emerald"
                 />
                 <img
                   src="images/icons/diamond.png"
                   alt="Diamond"
-                  data-tier="diamond"
+                  data-tier="Diamond"
                 />
                 <img
                   src="images/icons/master.png"
                   alt="Master"
-                  data-tier="master"
+                  data-tier="Master"
                 />
               </div>
             </div>
