--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
   </head>
+  <div id="particles-js"></div>
   <body class="fade-in homepage">
     <header>
       <a href="index.html" class="logo">
@@ -19,7 +20,7 @@
       <nav>
         <a href="rankboost.html">Order</a>
         <a href="faq.html">FAQ</a>
-        <a href="about.html">About</a>
+        <a href="about.html">Our Boosters</a>
         <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -37,6 +38,35 @@
         >Start Now</a
       >
     </main>
+
+    <section class="homepage-reviews">
+      <div class="homepage-review">
+        <div class="review-line">
+          <img src="images/fern-left.png" class="fern" alt="Fern Left" />
+          <span>Fast and smooth boosting, very happy with the service!</span>
+          <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+        </div>
+        <div class="rank-label">Silver IV ➔ Gold IV</div>
+      </div>
+
+      <div class="homepage-review">
+        <div class="review-line">
+          <img src="images/fern-left.png" class="fern" alt="Fern Left" />
+          <span>Super friendly and finished faster than expected!</span>
+          <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+        </div>
+        <div class="rank-label">Gold III ➔ Platinum IV</div>
+      </div>
+
+      <div class="homepage-review">
+        <div class="review-line">
+          <img src="images/fern-left.png" class="fern" alt="Fern Left" />
+          <span>Great communication and easy process. Highly recommend!</span>
+          <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+        </div>
+        <div class="rank-label">Bronze II ➔ Silver IV</div>
+      </div>
+    </section>
 
     <section
       style="
@@ -91,5 +121,8 @@
     <footer>
       <p>&copy; 2025 PayolaPal</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
