--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us - PayolaPal</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/wtcustom.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
@@ -19,75 +20,79 @@
       <nav>
         <a href="rankboost.html">Order</a>
         <a href="faq.html">FAQ</a>
-        <a href="about.html">About</a>
+        <a href="about.html">Our Boosters</a>
         <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </nav>
     </header>
 
-    <main>
-      <h2>Contact Us</h2>
+    <main id="main-content">
+      <h1>Contact Us</h1>
 
       <section class="contact-info">
-        <h3>Get in Touch</h3>
         <p>
           We're here to help! If you have any questions or need support, please
           don't hesitate to reach out.
         </p>
-        <p><strong>Email:</strong> support@payolapal.com</p>
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:payolapalgg@gmail.com">payolapalgg@gmail.com</a>
+        </p>
         <p>
           <strong>Discord:</strong>
-          <a href="https://discord.gg/payolapal" target="_blank"
+          <a href="https://discord.gg/E5W4DQGnPP" target="_blank"
             >Join our Discord</a
           >
         </p>
-        <p><strong>Phone:</strong> +1 234 567 890</p>
       </section>
 
-      <section class="contact-form">
-        <h3>Contact Form</h3>
-        <form
-          action="https://script.google.com/macros/s/AKfycbyKFuFrSIGpoD6QU125KalbuixzadCvE-0uIzIxkAZIznPJzCnXtRo0_xsdvBXZzQuNMQ/exec"
-          method="POST"
-        >
-          <label for="name">Your Name:</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            placeholder="e.g., John Doe"
-          />
+      <!-- Form Section with Consistent Styling -->
+      <div class="form-container">
+        <section class="contact-form">
+          <h3>Contact Form</h3>
+          <form
+            action="https://script.google.com/macros/s/AKfycbw12CNJnp6Lex5Kv5seN1lEMFTQySYjVecQjr2U3WhUk53Y529FmFo4vOR8xVYhTI0/exec"
+            method="POST"
+          >
+            <label for="name">Your Name:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              placeholder="e.g., John Doe"
+            />
 
-          <label for="email">Your Email:</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            required
-            placeholder="e.g., johnsmith@gmail.com"
-          />
+            <label for="email">Your Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              placeholder="e.g., johnsmith@gmail.com"
+            />
 
-          <label for="subject">Subject:</label>
-          <input
-            type="text"
-            id="subject"
-            name="subject"
-            required
-            placeholder="e.g., Inquiry about boosting service"
-          />
+            <label for="subject">Subject:</label>
+            <input
+              type="text"
+              id="subject"
+              name="subject"
+              required
+              placeholder="e.g., Inquiry about boosting service"
+            />
 
-          <label for="message">Your Message:</label>
-          <textarea
-            id="message"
-            name="message"
-            required
-            placeholder="Tell us your question or issue"
-          ></textarea>
+            <label for="message">Your Message:</label>
+            <textarea
+              id="message"
+              name="message"
+              required
+              placeholder="Tell us your question or issue"
+            ></textarea>
 
-          <input class="submitButton" type="submit" value="Send Message" />
-        </form>
-      </section>
+            <input class="submitButton" type="submit" value="Send Message" />
+          </form>
+        </section>
+      </div>
     </main>
 
     <footer>
