--- a/wins.html
+++ b/wins.html
@@ -21,7 +21,7 @@
       <nav>
         <a href="rankboost.html">Order</a>
         <a href="faq.html">FAQ</a>
-        <a href="about.html">About</a>
+        <a href="about.html">Our Boosters</a>
         <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact</a>
       </nav>
