--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - PayolaPal</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/about.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
@@ -27,42 +28,56 @@
 
     <main>
       <section>
-        <h2>About Us</h2>
+        <h1>About Us</h1>
         <p>
-          Welcome to PayolaPal, your trusted provider of League of Legends
-          boosting services. We are a team of dedicated, high-ranked players who
-          understand the effort and skills required to climb the ladder. Our
-          mission is to help you achieve your desired rank with professional,
-          reliable, and fast services.
-        </p>
-        <p>
-          Founded by Nathan, a Rank 1 player with years of experience, PayolaPal
-          is designed to deliver personalized boosting solutions tailored to
-          each player's individual needs. Whether you're looking for a
-          competitive edge or just want to save time, we are here to help you
-          reach your goals.
+          Welcome to PayolaPal, the most affordable League of Legends service.
+          If you are sick of horrible teammates weighing you down, and getting
+          scammed by these overpriced LoL services, you have come to the right
+          place. Here at PayolaPal, we ensure that your requests are delivered
+          quickly with constant communication throughout the entire process.
         </p>
       </section>
 
       <section>
-        <h3>Our Team</h3>
+        <h2>Our Team</h2>
         <p>
-          Our team consists of top-tier players who specialize in all aspects of
-          League of Legends. We offer a range of services from solo queue
-          boosting to account leveling, all performed by players with vast
-          knowledge and a proven track record in the game.
+          Our team consists of top-tier players, ex pros and reputable coaches
+          with years of experience.
         </p>
-      </section>
 
-      <section>
-        <h3>Why Choose Us?</h3>
-        <ul>
-          <li>Fast and reliable results.</li>
-          <li>Highly skilled and experienced players.</li>
-          <li>Custom services tailored to your needs.</li>
-          <li>Safe and secure boosting with strict confidentiality.</li>
-          <li>24/7 customer support via Discord and email.</li>
-        </ul>
+        <div class="booster-profile">
+          <div class="booster-card">
+            <div class="booster-image-wrapper">
+              <img
+                src="images/kyose.png"
+                alt="Booster Kyose"
+                class="booster-pfp"
+              />
+              <span class="booster-status online" title="Online"></span>
+            </div>
+            <div class="booster-info">
+              <div class="booster-name">
+                Kyose <span class="booster-rating">★ 5.0</span>
+              </div>
+              <div class="booster-roles">
+                <img src="images/icons/top.png" alt="Top" />
+                <img src="images/icons/jungle.png" alt="Jungle" />
+              </div>
+              <div class="booster-champ">Ahri</div>
+              <img
+                src="images/icons/challenger.png"
+                alt="Rank"
+                class="booster-rank"
+              />
+            </div>
+          </div>
+          <div class="booster-description">
+            <p>
+              Kyose is the founder of PayolaPal. He is a 5x Rank 1 with a decade
+              of experience, also having played professionally.
+            </p>
+          </div>
+        </div>
       </section>
     </main>
 
