--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ - PayolaPal</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/faq.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
@@ -44,10 +46,9 @@
         <div class="faq-item">
           <h3>How does the boosting process work?</h3>
           <p>
-            After you place an order, our professional booster will work on your
+            After you place an order, one of our professional boosters will work on your
             account to help you reach your desired rank. You can track the
-            progress through your dashboard and even chat with your booster for
-            updates.
+            progress of your order through the discord with consistent communication from  booster.
           </p>
         </div>
 
@@ -94,5 +95,7 @@
     <footer>
       <p>&copy; 2025 PayolaPal</p>
     </footer>
+
+    <script src="scripts/faq.js"></script>
   </body>
 </html>
