--- a/index.html
+++ b/index.html
@@ -40,32 +40,38 @@
     </main>
 
     <section class="homepage-reviews">
-      <div class="homepage-review">
-        <div class="review-line">
-          <img src="images/fern-left.png" class="fern" alt="Fern Left" />
-          <span>Fast and smooth boosting, very happy with the service!</span>
-          <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+      <a href="reviews.html" class="review-link">
+        <div class="homepage-review">
+          <div class="review-line">
+            <img src="images/fern-left.png" class="fern" alt="Fern Left" />
+            <span>Fast and smooth boosting, very happy with the service!</span>
+            <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+          </div>
+          <div class="rank-label">Silver IV ➔ Gold IV</div>
         </div>
-        <div class="rank-label">Silver IV ➔ Gold IV</div>
-      </div>
+      </a>
 
-      <div class="homepage-review">
-        <div class="review-line">
-          <img src="images/fern-left.png" class="fern" alt="Fern Left" />
-          <span>Super friendly and finished faster than expected!</span>
-          <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+      <a href="reviews.html" class="review-link">
+        <div class="homepage-review">
+          <div class="review-line">
+            <img src="images/fern-left.png" class="fern" alt="Fern Left" />
+            <span>Super friendly and finished faster than expected!</span>
+            <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+          </div>
+          <div class="rank-label">Gold III ➔ Platinum IV</div>
         </div>
-        <div class="rank-label">Gold III ➔ Platinum IV</div>
-      </div>
+      </a>
 
-      <div class="homepage-review">
-        <div class="review-line">
-          <img src="images/fern-left.png" class="fern" alt="Fern Left" />
-          <span>Great communication and easy process. Highly recommend!</span>
-          <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+      <a href="reviews.html" class="review-link">
+        <div class="homepage-review">
+          <div class="review-line">
+            <img src="images/fern-left.png" class="fern" alt="Fern Left" />
+            <span>Great communication and easy process. Highly recommend!</span>
+            <img src="images/fern-right.png" class="fern" alt="Fern Right" />
+          </div>
+          <div class="rank-label">Bronze II ➔ Silver IV</div>
         </div>
-        <div class="rank-label">Bronze II ➔ Silver IV</div>
-      </div>
+      </a>
     </section>
 
     <section
